[bumpversion]
current_version = 0.0.12
commit = False
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = 
	{major}.{minor}.{patch}

[metadata]
name = keys_management
version = file: VERSION
author = Ofek Israel
author_email = ofek.israel@nielsen.com
description = An assistant Tool for manage application secret keys and rotations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nielsen-oss/keys-management
project_urls = 
	Bug Tracker = https://github.com/nielsen-oss/keys-management/issues
classifiers = 
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[bumpversion:file:VERSION]
